feat: application yaml and .env file module pefect worked